[package]
name = "mirror-mirror"
version = "0.2.0-rc.1" # remember to bump the version mirror-mirror-macros depends on
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>", "David Pedersen <david.pdrsn@gmail.com>"]
repository = "https://github.com/EmbarkStudios/mirror-mirror"
homepage = "https://github.com/EmbarkStudios/mirror-mirror"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
rust-version = "1.65"
description = "Reflection library for Rust"
keywords = ["reflection"]

[features]
default = ["speedy", "serde", "simple_type_name","glam","macaw"]
simple_type_name = ["dep:syn"]
speedy = ["dep:speedy", "kollect/speedy", "glam/speedy"]
serde = ["dep:serde", "kollect/serde"]
glam = ["dep:glam"]
glam-scalar-math = ["glam/scalar-math"]
macaw = ["dep:macaw"]

[dependencies]
rustc-hash = { version = "2", default-features = false }
kollect = { version = "0.5", default-features = false }
mirror-mirror-macros = { path = "../mirror-mirror-macros", version = "0.2.0-rc.1" }
tiny-ordered-float = { version = "0.4", default-features = false }
serde = { version = "1.0.158", default-features = false, features = ["derive", "alloc"], optional = true }
speedy = { version = "0.8", optional = true }
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
glam = { version = "0.32", optional = true }
macaw = { version = "0.30", optional = true }

[dev-dependencies]
mirror-mirror-1 = { package = "mirror-mirror", version = "0.1" }
ron = "0.8.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
